team section done, overflow fix

--- a/style.css
+++ b/style.css
@@ -15,7 +15,7 @@ body {
     background-color: black;
     color: white;
     position: relative;
-    overflow: hidden;
+    /* overflow: hidden; */
     /* font-family: 'MyCustomFont', sans-serif; */
 }
 
@@ -144,13 +144,6 @@ p{
     font-family: 'MyCustomFont', sans-serif;
 }
 
-/* .input-container .icon {
-    background: #bdff23;
-    padding: 10px;
-    border-radius: 50%;
-    color: black;
-} */
-
 /* Button with Glow Effect */
 .btn {
     margin-top: 20px;
@@ -197,5 +190,115 @@ p{
     max-width: 85%;
     border-radius: 20px;
     
+}
+
+/* Second page */
+
+.team-section {
+    height: 100vh;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 50px;
+    color: white;
+    position: relative;
+}
+
+.background-video {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;/* Ensures video covers entire section */
+    background: rgba(0, 0, 0, 0.4); /* Dark overlay */
+    z-index: -1;
+    opacity: 0.2;  /* Adjust transparency */
+}
+
+
+.team-content {
+    width: 50%;
+    position: relative;
+}
+
+.dots-pattern {
+    position: absolute;
+    bottom: 95%;
+    left: 0;
+    width: 240px;
+    height: 100px;
+    background-image: radial-gradient(#A3FF00 30%, transparent 20%);
+    background-size: 15px 15px;
+}
+
+h2 {
+    font-size: 2.5rem;
+    margin-bottom: 15px;
+}
+
+p {
+    font-size: 1rem;
+    line-height: 1.6;
+}
+
+.book-button {
+    display: flex;
+    align-items: center;
+    background: #A3FF00;
+    color: black;
+    padding: 20px 20px;
+    border-radius: 30px;
+    border: none;
+    cursor: pointer;
+    font-weight: bold;
+    font-size: 2em;
+    transition: transform 0.3s ease-in-out, box-shadow 0.3s ease-in-out;
+    box-shadow: 0px 0px 20px #bdff23;
+    /* font-family: 'MyCustomFont', sans-serif; */
+}
+
+.book-button:hover {
+    transform: scale(1.05);
+    box-shadow: 0px 0px 30px #bdff23;
+}
+
+.book-button span {
+    
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-left: 10px;
+    font-size: 1.2em;
+    width:80px;
+    border-radius: 30px;
+    background: #d6ff77;
+}
+
+.team-image {
+    width: 40%;
+}
+
+.team-image img {
+    width: 290px;
+    height: 420px;
+    margin-left:150px;
+    margin-bottom: 50px;
+    border-radius: 5px;
+    display: block;
+    filter: grayscale(100%);
+    z-index: 1;  /* Ensures the image is on top */
+}
+
+.background-design{
+    position: absolute;
+    top: 17%;
+    right:9.5%;
+    width: 290px;
+    height: 420px;
+    background: url("images/Union.png") no-repeat center;
+    background-size: cover;
+    z-index: -1;
+    opacity: 1;  /* Makes it subtle */
 }
 
